packages/docs/versioned_docs/version-1.6.1/api/ConveyerOptions.mdx
---
custom_edit_url: null
---

<div>

</div>

**Type**: TSInterface

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|horizontal|boolean|<p>scroll direction. (true: Horizontal Scroll, false: Vertical Scroll)  (default: true) </p>|
|itemSelector|string|<p>selector to find items inside. (default: &quot;&quot;) </p>|
|useDrag|boolean|<p>Whether to use drag (default: true) </p>|
|useSideWheel|boolean|<p>Whether to use the mouse wheel in a direction aside from the scroll direction (default: false) </p>|
|boundaryMargin|number|<p>The minimum margin space for [reachStart](Conveyer#event-reachStart), [leaveStart](Conveyer#event-leaveStart), [reachEnd](Conveyer#event-reachEnd), and [leaveEnd](Conveyer#event-leaveEnd) events to be triggered at the beginning and end of the scroll area. (default: 0)<br /></p>|
|scrollDebounce|number|<p>The maximum amount of time the scroll event does not fire for the finishScroll event to be triggered. (default: 100) </p>|
|preventDefault|boolean|<p>Whether to prevent being selected. (default: true) </p>|
|preventClickOnDrag|boolean|<p>Whether to prevent click event when dragging. (default: false) </p>|
|preventDefaultOnDrag|boolean|<p>Whether to use the [preventDefault](https://developer.mozilla.org/ko/docs/Web/API/Event/preventDefault) when the user starts dragging </p>|
|autoInit|boolean|<p>Whether to automatically initialize when an instance is created. If set to false, initialization is possible while calling the init method. (default: true) </p>|
|nested|boolean|<p>If this option is enabled on a Conveyer placed inside an egjs component that has the same scroll direction including the Conveyer itself. The parent component moves in the same direction after the Conveyer reaches the first/last scroll position. </p>|

